src/objects/FieloPLT__Program__c.object
<CustomObject>
    <description>Programs establish the general operation settings of your loyalty program.</description>
    <fields>
        <fullName>FieloPLT__ActualPointCost__c</fullName>
        <description>It translates Transaction Points into real currency cost.</description>
        <inlineHelpText>It translates Transaction Points into real currency cost.</inlineHelpText>
        <label>Actual Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CriteriaFields__c</fullName>
        <description>Internal field. It stores all &quot;Field Name&quot; fields used in the Criterion of Rules.</description>
        <inlineHelpText>Internal field. It stores all &quot;Field Name&quot; fields used in the Criterion of Rules.</inlineHelpText>
        <label>Criteria Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NumberOfVoucherDigits__c</fullName>
        <description>Number of digits displayed on the voucher. Vouchers must include at least 4 digits.</description>
        <inlineHelpText>Set the number of digits displayed on the Voucher (min. 4 digits).</inlineHelpText>
        <label>Number of Voucher Digits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OnlineTransactionProcessing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When ticked, Transactions and Trackers are processed online when recorded. Otherwise, all transactions and trackers are processed offline.</description>
        <inlineHelpText>When ticked, Transactions and Trackers are processed online when recorded.</inlineHelpText>
        <label>Online Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RequestMemberAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, new Members need to be approved before being included in the Program and an Authorization Workflow needs to be established.</description>
        <inlineHelpText>When ticked, new Members need to be approved before being included in the Program.</inlineHelpText>
        <label>Request Member Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RequestRedemptionAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, new Redemptions need to be approved beforehand.</description>
        <inlineHelpText>When ticked, new Redemptions need to be approved beforehand.</inlineHelpText>
        <label>Request Redemption Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RequestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, Member status is &quot;Pending User&quot;. It is used when either an external or Fielo Site is used.</description>
        <inlineHelpText>When ticked, Member status is &quot;Pending User&quot; (used only when there is an external or Fielo Site).</inlineHelpText>
        <label>Request User Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardInjectQuery__c</fullName>
        <description>Field that filters Rewards by means of conditions.</description>
        <inlineHelpText>Field that filters Rewards by means of conditions.</inlineHelpText>
        <label>Reward Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SegmentInjectQuery__c</fullName>
        <description>Field that filters Segments by means of conditions.</description>
        <inlineHelpText>Field that filters Segments by means of conditions.</inlineHelpText>
        <label>Segment Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SiteUserProfile__c</fullName>
        <description>Salesforce profile used by Members to log in to the Site.</description>
        <inlineHelpText>Salesforce profile used by Members to log in to the Site.</inlineHelpText>
        <label>Site User Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UserCreationClass__c</fullName>
        <description>Class for User creation reflection.</description>
        <inlineHelpText>Enter the class for User creation reflection.</inlineHelpText>
        <label>User Creation Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRSPointType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GRS Point Type</label>
        <referenceTo>FieloPLT__PointType__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>GRSPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ValidateNumerOfVoucherDigits</fullName>
        <active>true</active>
        <description>Voucher must include at least 4 digits.</description>
        <errorConditionFormula>FieloPLT__NumberOfVoucherDigits__c &lt; 4</errorConditionFormula>
        <errorDisplayField>FieloPLT__NumberOfVoucherDigits__c</errorDisplayField>
        <errorMessage>Voucher must include at least 4 digits.</errorMessage>
    </validationRules>
</CustomObject>